refactor the POST booking feature (#18)
* refactor the POST booking feature

* fixing the application so it can run

* cleaning up
